--- a/html/views/Entrar.html
+++ b/html/views/Entrar.html
@@ -24,16 +24,16 @@
       <div class="collapse navbar-collapse justify-content-end" id="navbarNav">
         <ul class="navbar-nav">
           <li class="nav-item nav-pills pr-2">
-            <a class="nav-link hvr-back-pulse branco" href="#">Home</a>
+            <a class="nav-link hvr-back-pulse branco" href="../views/Home.html">Home</a>
           </li>
           <li class="nav-item nav-pills pr-2">
-            <a class="nav-link hvr-back-pulse branco" href="#">Pacotes</a>
+            <a class="nav-link hvr-back-pulse branco" href="../views/Pacotes.html">Pacotes</a>
           </li>
           <li class="nav-item nav-pills pr-2">
             <a class="nav-link hvr-back-pulse branco roxo active" href="#">Entrar <span class="sr-only">(current)</span></a>
           </li>
           <li class="nav-item nav-pills pr-2">
-              <a class="nav-link hvr-back-pulse branco" href="#">Cadastre-se</a>
+              <a class="nav-link hvr-back-pulse branco" href="../views/Cadastro.html">Cadastre-se</a>
             </li>
         </ul>
       </div>
@@ -62,8 +62,8 @@
             <label class="form-check-label" for="exampleCheck1">Lembrar-me</label>
           </div>
 
-        <button type="submit" class="btn btn-primary">Entrar</button>
-        <button type="submit" class="btn btn-primary">Cadastre-se</button>
+          <a href="../views/Cliente.html" class="btn btn-primary roxo">Entrar</a>
+          <a href="../views/Cadastro.html" class="btn btn-primary roxo">Cadastre-se</a>
 
       </form>
         </div>
@@ -72,7 +72,7 @@
     </div>
    
 
-    <footer class="footer absoluto">
+    <footer class="footer">
       <div class="container-fluid">
           <div class="row d-flex flex-row align-items-center">
               <div class="col-sm-4">
@@ -82,8 +82,8 @@
               </div>
               <div class="col-sm-4">
                 <div class="d-flex flex-row">
-                  <p class="rede-social m-3"><img src="../img/fb.png" class="img-social hvr-grow border-0 rounded-3" alt="..." /></p>
-                  <p class="rede-social m-3"><img src="../img/inst.png" class="img-social hvr-grow border-0 rounded-3" alt="..." /></p>
+                  <a href="https://twitter.com/wizzardtrip" target="_blank"><p class="rede-social m-3"><img src="../img/tt.png" class="img-twitter hvr-grow border-0 rounded-3"/></p></a>
+                  <a href="https://www.instagram.com/wizzardtrip/" target="_blank"><p class="rede-social m-3"><img src="../img/inst.png" class="img-social hvr-grow border-0 rounded-3"/></p></a>
                 </div>
               </div>
           </div>
