--- a/html/views/Home.html
+++ b/html/views/Home.html
@@ -27,13 +27,13 @@
               <a class="nav-link hvr-back-pulse branco roxo active" href="#">Home <span class="sr-only">(current)</span></a>
             </li>
             <li class="nav-item nav-pills pr-2">
-              <a class="nav-link hvr-back-pulse branco" href="#">Pacotes</a>
+              <a class="nav-link hvr-back-pulse branco" href="../views/Pacotes.html">Pacotes</a>
             </li>
             <li class="nav-item nav-pills pr-2">
-              <a class="nav-link hvr-back-pulse branco" href="#">Entrar</a>
+              <a class="nav-link hvr-back-pulse branco" href="../views/Entrar.html">Entrar</a>
             </li>
             <li class="nav-item nav-pills pr-2">
-                <a class="nav-link hvr-back-pulse branco" href="#">Cadastre-se</a>
+                <a class="nav-link hvr-back-pulse branco" href="../views/Cadastro.html">Cadastre-se</a>
               </li>
           </ul>
         </div>
@@ -53,7 +53,8 @@
                 <div class="carousel-caption d-none d-md-block">
                   <h1>Plano Bronze</h1>
                   <h4>Nosso plano de Viagens locais dentro do território nacional</h4>
-                  <small class="text-muted hvr-grow pointer">Clique aqui para saber mais</small>
+                  <small class="text-muted hvr-grow pointer"><a href="../views/Pacotes.html" class="stretched-link text-light">
+                    Clique aqui para saber mais</a></small>
                 </div>
               </div>
               <div class="carousel-item gradiente">
@@ -61,8 +62,9 @@
                 <div class="carousel-caption d-none d-md-block">
                   <h1>Plano Prata</h1>
                   <h4>Nossa opção com viagens internacionais dentro do território da America do Sul</h4>
-                  <small class="text-muted hvr-grow pointer">Clique aqui para saber mais</small>
-                </div>
+                  <small class="text-muted hvr-grow pointer"><a href="../views/Pacotes.html" class="stretched-link text-light">
+                    Clique aqui para saber mais</a></small>
+                  </div>
               </div>
               <div class="carousel-item gradiente">
                 <img src="../img/paris.jpg" class="d-block w-100" alt="...">
@@ -89,15 +91,10 @@
             <h1>O que é</h1>
             <div class="row">
                 <div class="col-sm-12">
-                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nulla id nibh et neque tempus aliquet laoreet ut dui. Pellentesque augue sapien, ultricies sed blandit vel, vestibulum nec dolor. 
-                        Sed consectetur leo eu leo pellentesque elementum. Sed arcu ex, sodales nec posuere eget, venenatis congue ante. 
-                        Duis felis mauris, volutpat non auctor eu, malesuada ut nunc. Sed arcu justo, dictum a tellus vel, ullamcorper fermentum purus. 
-                        Proin ante ante, sollicitudin non dui eget, commodo hendrerit diam. Aenean finibus maximus iaculis. </p>
-                    <p>Mauris non arcu viverra, pulvinar eros id, egestas eros. Fusce dapibus dui velit, ut faucibus diam ultricies sit amet. Fusce felis eros, gravida sit amet tempus quis, accumsan vitae erat. 
-                        Nam at dapibus ex, id auctor tellus. Aliquam lobortis elit et eros facilisis, nec finibus nisi imperdiet. Nam ac vehicula odio. Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas. 
-                        Aenean eget tortor imperdiet, euismod purus sed, vehicula erat. Aliquam auctor sollicitudin nunc, ac auctor eros ornare pulvinar. </p>
-                    <p>Curabitur tincidunt feugiat pretium. In malesuada nec arcu eget vulputate. Proin ornare velit sit amet mattis posuere. Aliquam mattis, felis a hendrerit molestie, massa lectus pretium dui, 
-                        sed imperdiet ex tellus sed purus.</p>   
+                    <p>Wizzard é um serviço único, pioneiro no mercado de turismo, com a intenção de trazer aos nossos clientes experiências únicas e completamente magica.
+                      Fundamos a Wizzardtrip em um ano complicado ainda em meio a uma pandemia global. Nesse momento delicado da humanidade conseguimos visualizar não só os anceios de seus fundadores mas sim de todas as pessoas que tem essa essencia livre e são completamente apaixonado por novas historias e viagens
+                       </p>
+                    <p>Após ter-mos essa experiencia de certa forma ruim de isolamento e distanciamento social, oferecemos a oportunidade de poder abrar ao menos mais uma vez algum desconhecido entrar em contato com novas culturas e tradições, reconectar as pessoas. </p>   
                 </div>
             </div>
         </div>
@@ -146,23 +143,23 @@
   </div>
 
 
-    <footer class="footer">
-      <div class="container-fluid">
-          <div class="row d-flex flex-row align-items-center">
-              <div class="col-sm-4">
-                  <p>© 2020 Wizzard Trip. Todos os direitos reservados.</p>
+  <footer class="footer">
+    <div class="container-fluid">
+        <div class="row d-flex flex-row align-items-center">
+            <div class="col-sm-4">
+                <p>© 2020 Wizzard Trip. Todos os direitos reservados.</p>
+            </div>
+            <div class="col-sm-4">
+            </div>
+            <div class="col-sm-4">
+              <div class="d-flex flex-row">
+                <a href="https://twitter.com/wizzardtrip" target="_blank"><p class="rede-social m-3"><img src="../img/tt.png" class="img-twitter hvr-grow border-0 rounded-3"/></p></a>
+                <a href="https://www.instagram.com/wizzardtrip/" target="_blank"><p class="rede-social m-3"><img src="../img/inst.png" class="img-social hvr-grow border-0 rounded-3"/></p></a>
               </div>
-              <div class="col-sm-4">
-              </div>
-              <div class="col-sm-4">
-                <div class="d-flex flex-row">
-                  <p class="rede-social m-3"><img src="../img/fb.png" class="img-social hvr-grow border-0 rounded-3" alt="..." /></p>
-                  <p class="rede-social m-3"><img src="../img/inst.png" class="img-social hvr-grow border-0 rounded-3" alt="..." /></p>
-                </div>
-              </div>
-          </div>
-      </div>
-  </footer>
+            </div>
+        </div>
+    </div>
+</footer>
 
   </body>
 </html>
