--- a/html/views/Pacotes.html
+++ b/html/views/Pacotes.html
@@ -24,16 +24,16 @@
       <div class="collapse navbar-collapse justify-content-end" id="navbarNav">
         <ul class="navbar-nav">
           <li class="nav-item nav-pills pr-2">
-            <a class="nav-link hvr-back-pulse branco" href="#">Home</a>
+            <a class="nav-link hvr-back-pulse branco" href="../views/Home.html">Home</a>
           </li>
           <li class="nav-item nav-pills pr-2">
             <a class="nav-link hvr-back-pulse branco roxo active" href="#">Pacotes<span class="sr-only">(current)</span></a>
           </li>
           <li class="nav-item nav-pills pr-2">
-            <a class="nav-link hvr-back-pulse branco" href="#">Entrar</a>
+            <a class="nav-link hvr-back-pulse branco" href="../views/Entrar.html">Entrar</a>
           </li>
           <li class="nav-item nav-pills pr-2">
-              <a class="nav-link hvr-back-pulse branco" href="#">Cadastre-se</a>
+              <a class="nav-link hvr-back-pulse branco" href="../views/Cadastro.html">Cadastre-se</a>
             </li>
         </ul>
       </div>
@@ -51,7 +51,7 @@
               desde suas praias em vários cantos do País até pontos turísticos que vai de 
               Cristo Redentor até as cataratas do Iguaçu</p>
               <p class="card-text"><small class="text-muted">R$256,87 /mês</small></p>
-            <button class="btn btn-primary botao-compra-pacotes">Comprar</button>
+            <a href="../views/Pagamento.html" class="btn btn-primary botao-compra-pacotes roxo">Comprar</a>
 
           </div>
         </div>
@@ -62,8 +62,7 @@
             <p class="card-text">Escolher a América Latina como seu plano é garantia de encontrar lugares fascinantes. 
               De praias a desertos, de ilhas a cidades históricas passando por sítios arqueológicos de importância histórica única.</p>
             <p class="card-text"><small class="text-muted">R$368,87 /mês</small></p>
-            <button class="btn btn-primary botao-compra-pacotes">Comprar</button>
-
+            <a href="../views/Pagamento.html" class="btn btn-primary botao-compra-pacotes roxo">Comprar</a>
           </div>
         </div>
         <div class="card">
@@ -73,8 +72,7 @@
             <p class="card-text">Não tenha limites e viaje o mundo todo, seja uma viagem na Europa ou até mesmo no continente asiático, 
               nós oferecemos o que o mundo tem de melhor para você. Com viagens inesquecíveis ao redor do mundo.</p>
             <p class="card-text"><small class="text-muted">R$598,47 /mês</small></p>
-            <button class="btn btn-primary botao-compra-pacotes">Comprar</button>
-
+            <a href="../views/Pagamento.html" class="btn btn-primary botao-compra-pacotes roxo">Comprar</a>
           </div>
         </div>
       </div>
@@ -124,8 +122,8 @@
                 </div>
                 <div class="col-sm-4">
                   <div class="d-flex flex-row">
-                    <p class="rede-social m-3"><img src="../img/fb.png" class="img-social hvr-grow border-0 rounded-3" alt="..." /></p>
-                    <p class="rede-social m-3"><img src="../img/inst.png" class="img-social hvr-grow border-0 rounded-3" alt="..." /></p>
+                    <a href="https://twitter.com/wizzardtrip" target="_blank"><p class="rede-social m-3"><img src="../img/tt.png" class="img-twitter hvr-grow border-0 rounded-3"/></p></a>
+                    <a href="https://www.instagram.com/wizzardtrip/" target="_blank"><p class="rede-social m-3"><img src="../img/inst.png" class="img-social hvr-grow border-0 rounded-3"/></p></a>
                   </div>
                 </div>
             </div>
