--- a/html/views/Pagamento.html
+++ b/html/views/Pagamento.html
@@ -24,16 +24,16 @@
       <div class="collapse navbar-collapse justify-content-end" id="navbarNav">
         <ul class="navbar-nav">
           <li class="nav-item nav-pills pr-2">
-            <a class="nav-link hvr-back-pulse branco roxo active" href="#">Home <span class="sr-only">(current)</span></a>
+            <a class="nav-link hvr-back-pulse branco" href="../views/Home.html">Home</span></a>
           </li>
           <li class="nav-item nav-pills pr-2">
-            <a class="nav-link hvr-back-pulse branco" href="#">Pacotes</a>
+            <a class="nav-link hvr-back-pulse branco" href="../views/Pacotes.html">Pacotes</a>
           </li>
           <li class="nav-item nav-pills pr-2">
-            <a class="nav-link hvr-back-pulse branco" href="#">Entrar</a>
+            <a class="nav-link hvr-back-pulse branco" href="../views/Entrar.html">Entrar</a>
           </li>
           <li class="nav-item nav-pills pr-2">
-              <a class="nav-link hvr-back-pulse branco" href="#">Cadastre-se</a>
+              <a class="nav-link hvr-back-pulse branco" href="../views/Cadastro.html">Cadastre-se</a>
             </li>
         </ul>
       </div>
@@ -80,7 +80,7 @@
           </select>
 
           <div class="botao-compra-pagamento">
-          <button type="button" class="btn btn-primary">Comprar</button>
+            <a href="../views/Cliente.html" class="btn btn-primary botao-compra-pacotes roxo">Comprar</a>
           </div>
         </div>
 
@@ -117,8 +117,8 @@
                 </div>
                 <div class="col-sm-4">
                   <div class="d-flex flex-row">
-                    <p class="rede-social m-3"><img src="../img/fb.png" class="img-social hvr-grow border-0 rounded-3" alt="..." /></p>
-                    <p class="rede-social m-3"><img src="../img/inst.png" class="img-social hvr-grow border-0 rounded-3" alt="..." /></p>
+                    <a href="https://twitter.com/wizzardtrip" target="_blank"><p class="rede-social m-3"><img src="../img/tt.png" class="img-twitter hvr-grow border-0 rounded-3"/></p></a>
+                    <a href="https://www.instagram.com/wizzardtrip/" target="_blank"><p class="rede-social m-3"><img src="../img/inst.png" class="img-social hvr-grow border-0 rounded-3"/></p></a>
                   </div>
                 </div>
             </div>
