--- a/html/views/Cliente.html
+++ b/html/views/Cliente.html
@@ -24,16 +24,16 @@
       <div class="collapse navbar-collapse justify-content-end" id="navbarNav">
         <ul class="navbar-nav">
           <li class="nav-item nav-pills pr-2">
-            <a class="nav-link hvr-back-pulse branco roxo active" href="#">Home <span class="sr-only">(current)</span></a>
+            <a class="nav-link hvr-back-pulse branco" href="../views/Home.html">Home</a>
           </li>
           <li class="nav-item nav-pills pr-2">
-            <a class="nav-link hvr-back-pulse branco" href="#">Pacotes</a>
+            <a class="nav-link hvr-back-pulse branco" href="../views/Pacotes.html">Pacotes</a>
           </li>
           <li class="nav-item nav-pills pr-2">
-            <a class="nav-link hvr-back-pulse branco" href="#">Entrar</a>
+            <a class="nav-link hvr-back-pulse branco" href="../views/Entrar.html">Entrar</a>
           </li>
           <li class="nav-item nav-pills pr-2">
-              <a class="nav-link hvr-back-pulse branco" href="#">Cadastre-se</a>
+              <a class="nav-link hvr-back-pulse branco" href="../views/Cadastro.html">Cadastre-se</a>
             </li>
         </ul>
       </div>
@@ -89,9 +89,9 @@
 
         </div>
         <div class="col-sm-6 text-right">
-          <h5 class="d-block mb-3 hvr-grow pointer">Atualize seu plano<img src="../img/update.png" class="img-icon border-0 rounded-3" alt="..." /></h5>
-          <h5 class="d-block mb-3 hvr-grow pointer">Atualize a forma de pagamento<img src="../img/pay.png" class="img-icon border-0 rounded-3" alt="..." /></h5>
-          <h5 class="d-block mb-3 hvr-grow pointer">Veja o Historico de cobrança<img src="../img/wallet.png" class="img-icon border-0 rounded-3" alt="..." /></h5>
+          <h5 class="d-block mb-3 hvr-grow pointer"><a href="../views/Pacotes.html" class="stretched-link text-dark">Atualize seu plano</a><img src="../img/update.png" class="img-icon border-0 rounded-3" alt="..." /></h5>
+          <h5 class="d-block mb-3 hvr-grow pointer"><a href="../views/Pagamento.html" class="stretched-link text-dark">Atualize a forma de pagamento</a><img src="../img/pay.png" class="img-icon border-0 rounded-3" alt="..." /></h5>
+          <h5 class="d-block mb-3 hvr-grow pointer"><a href="#" class="stretched-link text-dark">Veja o Historico de cobrança</a><img src="../img/wallet.png" class="img-icon border-0 rounded-3" alt="..." /></h5>
         </div>
       </div>
     </div>
@@ -108,8 +108,8 @@
               </div>
               <div class="col-sm-4">
                 <div class="d-flex flex-row">
-                  <p class="rede-social m-3"><img src="../img/fb.png" class="img-social hvr-grow border-0 rounded-3" alt="..." /></p>
-                  <p class="rede-social m-3"><img src="../img/inst.png" class="img-social hvr-grow border-0 rounded-3" alt="..." /></p>
+                  <a href="https://twitter.com/wizzardtrip" target="_blank"><p class="rede-social m-3"><img src="../img/tt.png" class="img-twitter hvr-grow border-0 rounded-3"/></p></a>
+                  <a href="https://www.instagram.com/wizzardtrip/" target="_blank"><p class="rede-social m-3"><img src="../img/inst.png" class="img-social hvr-grow border-0 rounded-3"/></p></a>
                 </div>
               </div>
           </div>
