Beta Final corrigida

--- a/html/views/Cadastro.html
+++ b/html/views/Cadastro.html
@@ -15,7 +15,7 @@
     
     <nav class="navbar navbar-expand-lg navbar-light header">
       <div class="container">
-          <a class="navbar-brand hvr-grow" href="#">
+          <a class="navbar-brand hvr-grow" href="../views/Home.html">
             <img src="../img/logo.png" width="200" height="55" class="d-inline-block align-top black-color" alt="">
           </a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
@@ -50,16 +50,16 @@
           <input type="text" class="form-control">
         </div>
         <div class="form-group">
-          <label for="campoNome">Telefone</label>
+          <label for="campoTelefone">Telefone</label>
           <input type="text" class="form-control">
         </div>
         <div class="form-group">
-          <label for="campoNome">Endereço</label>
+          <label for="campoEndereco">Endereço</label>
           <input type="text" class="form-control">
         </div>
         <div class="form-group">
           <label for="campoEmail">Email</label>
-          <input type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp">
+          <input type="email" class="form-control">
         </div>
         <div class="form-group">
           <label for="campoSenha">Senha</label>
