--- a/html/views/Home.html
+++ b/html/views/Home.html
@@ -49,7 +49,7 @@
             </ol>
             <div class="carousel-inner ">
               <div class="carousel-item gradiente active">
-                <img src="../img/rio.jpg" class="d-block w-100 " alt="...">
+                <img src="../img/rio.jpg" class="d-block w-100 ">
                 <div class="carousel-caption d-none d-md-block">
                   <h1>Plano Bronze</h1>
                   <h4>Nosso plano de Viagens locais dentro do território nacional</h4>
@@ -58,7 +58,7 @@
                 </div>
               </div>
               <div class="carousel-item gradiente">
-                <img src="../img/peru.jpg" class="d-block w-100" alt="...">
+                <img src="../img/peru.jpg" class="d-block w-100">
                 <div class="carousel-caption d-none d-md-block">
                   <h1>Plano Prata</h1>
                   <h4>Nossa opção com viagens internacionais dentro do território da America do Sul</h4>
@@ -67,7 +67,7 @@
                   </div>
               </div>
               <div class="carousel-item gradiente">
-                <img src="../img/paris.jpg" class="d-block w-100" alt="...">
+                <img src="../img/paris.jpg" class="d-block w-100">
                 <div class="carousel-caption d-none d-md-block">
                   <h1>Plano Ouro</h1>
                   <h4>Nosso melhor plano com viagens Internarcionais para qualquer lugar do mundo</h4>
