--- a/html/views/Pacotes.html
+++ b/html/views/Pacotes.html
@@ -15,7 +15,7 @@
 
     <nav class="navbar navbar-expand-lg navbar-light header">
       <div class="container">
-          <a class="navbar-brand hvr-grow" href="#">
+          <a class="navbar-brand hvr-grow" href="../views/Home.html">
             <img src="../img/logo.png" width="200" height="55" class="d-inline-block align-top black-color" alt="">
           </a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
@@ -44,7 +44,7 @@
 
     <div class="card-group">
         <div class="card">
-          <img src="../img/rio.jpg" class="card-img-top img-pacote" alt="...">
+          <img src="../img/rio.jpg" class="card-img-top img-pacote">
           <div class="card-body">
             <h5 class="card-title">Plano Bronze</h5>
             <p class="card-text">Para os amantes de viagens nacionais oferecemos o que o Brasil tem de melhor 
@@ -56,7 +56,7 @@
           </div>
         </div>
         <div class="card">
-          <img src="../img/peru.jpg" class="card-img-top img-pacote" alt="...">
+          <img src="../img/peru.jpg" class="card-img-top img-pacote">
           <div class="card-body">
             <h5 class="card-title">Plano Prata</h5>
             <p class="card-text">Escolher a América Latina como seu plano é garantia de encontrar lugares fascinantes. 
@@ -66,7 +66,7 @@
           </div>
         </div>
         <div class="card">
-          <img src="../img/paris.jpg" class="card-img-top img-pacote" alt="...">
+          <img src="../img/paris.jpg" class="card-img-top img-pacote">
           <div class="card-body">
             <h5 class="card-title">Plano Ouro</h5>
             <p class="card-text">Não tenha limites e viaje o mundo todo, seja uma viagem na Europa ou até mesmo no continente asiático, 
