--- a/html/views/Entrar.html
+++ b/html/views/Entrar.html
@@ -15,7 +15,7 @@
     
     <nav class="navbar navbar-expand-lg navbar-light header">
       <div class="container">
-          <a class="navbar-brand hvr-grow" href="#">
+          <a class="navbar-brand hvr-grow" href="../views/Home.html">
             <img src="../img/logo.png" width="200" height="55" class="d-inline-block align-top black-color" alt="">
           </a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
@@ -46,20 +46,19 @@
     <form>
         <h4>Já sou cliente</h4>
         <div class="form-group">
-          <label for="exampleInputEmail1">Email</label>
-          <input type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp">
-          <small id="emailHelp" class="form-text text-muted"></small>
+          <label for="campoEmail">Email</label>
+          <input type="email" class="form-control">
         </div>
         <div class="form-group">
-          <label for="exampleInputPassword1">Senha</label>
-          <input type="password" class="form-control" id="exampleInputPassword1">
-          <small class="form-text text-muted esqueceu">Esqueceu sua senha?</small>
+          <label for="campoSenha">Senha</label>
+          <input type="password" class="form-control">
+          <a href="#" class="stretched-link text-light"><small class="form-text text-muted esqueceu">Esqueceu sua senha?</small></a>
 
         </div>
 
         <div class="form-group form-check">
-            <input type="checkbox" class="form-check-input" id="exampleCheck1">
-            <label class="form-check-label" for="exampleCheck1">Lembrar-me</label>
+            <input type="checkbox" class="form-check-input">
+            <label class="form-check-label" for="CheckRemember">Lembrar-me</label>
           </div>
 
           <a href="../views/Cliente.html" class="btn btn-primary roxo">Entrar</a>
@@ -72,7 +71,7 @@
     </div>
    
 
-    <footer class="footer">
+    <footer class="footer absoluto">
       <div class="container-fluid">
           <div class="row d-flex flex-row align-items-center">
               <div class="col-sm-4">
