--- a/html/views/Pagamento.html
+++ b/html/views/Pagamento.html
@@ -15,7 +15,7 @@
     
     <nav class="navbar navbar-expand-lg navbar-light header">
       <div class="container">
-          <a class="navbar-brand hvr-grow" href="#">
+          <a class="navbar-brand hvr-grow" href="../views/Home.html">
             <img src="../img/logo.png" width="200" height="55" class="d-inline-block align-top black-color" alt="">
           </a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
@@ -107,7 +107,7 @@
 
    
 
-      <footer class="footer">
+      <footer class="footer absoluto">
         <div class="container-fluid">
             <div class="row d-flex flex-row align-items-center">
                 <div class="col-sm-4">
