--- a/html/views/Entrar.html
+++ b/html/views/Entrar.html
@@ -52,7 +52,7 @@
         <div class="form-group">
           <label for="campoSenha">Senha</label>
           <input type="password" class="form-control">
-          <a href="#" class="stretched-link text-light"><small class="form-text text-muted esqueceu">Esqueceu sua senha?</small></a>
+          <small class="form-text text-muted esqueceu">Esqueceu sua senha?</small>
 
         </div>
 
@@ -60,10 +60,11 @@
             <input type="checkbox" class="form-check-input">
             <label class="form-check-label" for="CheckRemember">Lembrar-me</label>
           </div>
+        <div class="form-group">
 
           <a href="../views/Cliente.html" class="btn btn-primary roxo">Entrar</a>
           <a href="../views/Cadastro.html" class="btn btn-primary roxo">Cadastre-se</a>
-
+</div>
       </form>
         </div>
 
