--- a/html/views/Index.html
+++ b/html/views/Index.html
@@ -71,7 +71,8 @@
                 <div class="carousel-caption d-none d-md-block">
                   <h1>Plano Ouro</h1>
                   <h4>Nosso melhor plano com viagens Internarcionais para qualquer lugar do mundo</h4>
-                  <small class="text-muted hvr-grow pointer">Clique aqui para saber mais</small>
+                                    <small class="text-muted hvr-grow pointer"><a href="../views/Pacotes.html" class="stretched-link text-light">
+                    Clique aqui para saber mais</a></small>
                 </div>
               </div>
             </div>
